--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,21 @@
+cffi==1.6.0
 click==6.6
+cryptography==1.4
+enum34==1.1.6
 Flask==0.11.1
+idna==2.1
+ipaddress==1.0.16
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+ndg-httpsclient==0.4.1
+oauthlib==1.1.2
+pyasn1==0.1.9
+pycparser==2.14
+pyOpenSSL==16.0.0
 requests==2.10.0
+requests-oauthlib==0.6.1
+six==1.10.0
+tweepy==3.5.0
 Werkzeug==0.11.10
 wheel==0.24.0
